20430
{code}
scala> class A(i: Int)
defined class A

scala> new A(_)
res0: Int => A = $$Lambda$1780/1293885429@222afc67

scala> abstract class B(i: Int)
defined class B

scala> new B(_){}
<console>:13: error: missing parameter type for expanded function ((x$1: <error>) => {
  final class $anon extends B(x$1) {
    def <init>() = {
      super.<init>();
      ()
    };
    <empty>
  };
  new $anon()
})
       new B(_){}
             ^
{code}

Shouldn't the expression {code}new B(_){}{code} be inferred to have the type {{Int => B}}?

